TAG: qcreports_db-5-2-1-21
DATE: 05/11/2015
STAFF: lec
CHANGES:
TR12020/mgd/MRK_Alleles.sql

TAG: qcreports_db-5-2-1-20
TAG: qcreports_db-5-2-1-19
DATE: 05/05/2015
STAFF: lec
CHANGES:
TR12014 - obsolete gbcdnaload/cloneload
1) qcr.html - remove links to gbcdnaload
2) removed gbcdnaload, cloneload directories
3) removed mgcload

TAG: qcreports_db-5-2-1-18
DATE: 05/05/2015
STAFF: sc
CHANGES:
1) qcr.html - remove links to gbseqload, refseqload and spseqload

TAG: qcreports_db-5-2-1-17
DATE: 04/29/2015
STAFF: dbm
CHANGES:
1) qcr.html: removed link to index page for mgcload

TAG: qcreports_db-5-2-1-16
DATE: 04/28/2015
STAFF: dbm
CHANGES:
1) qcr.html: removed links to index pages for machipload and mousefuncload

TAG: qcreports_db-5-2-1-15
DATE: 04/22/2015
STAFF: lec
CHANGE: 
1) TR11932 : RefGenome -> GO_Central
mgd/GO_stats.py
monthly/MRK_GOAnnot.py

TAG: qcreport_db-5-2-1-13, qcreport_db-5-2-1-14
DATE: 04/15/2015
STAFF: kstone
1) TR11932 - GO_stats.py GO Central -> GO_Central

TAG: qcreports_db-5-2-1-12
DATE: 04/9/2015
STAFF: dbm
CHANGES:
1) qcr.html: updated links to dataload index pages

TAG: qcreports_db-5-2-1-11
DATE: 04/8/2015
STAFF: dbm
CHANGES:
1) mgd/NOMEN_Pending.sql: obsolete report
2) mgd/NOMEN_Reserved.py: obsolete report
3) qcr.html: remove link to above reports
4) qcnightly_reports.csh: don't copy above reports to HUGO directories

TAG: qcreports_db-5-2-1-10
DATE: 04/8/2015
STAFF: lec
CHANGES:
1) weekly/PRB_StrainPrivate.py : obsolete report

TAG: qcreports_db-5-2-1-9
TAG: qcreports_db-5-2-1-8
DATE: 03/25/2015
STAFF: dbm
CHANGES:
1) qcmonthly_reports.csh: Changed for Linux/Postgres
2) qcnightly_reports.csh: Changed for Linux/Postgres
3) qcsunday_reports.csh: Changed for Linux/Postgres
4) qcweekly_reports.csh: Changed for Linux/Postgres
5) qcr.html: Remove link to PRB_Strain_NameChanges.rpt (retired)
6) strainChanges.csh: Retired
7) Install: Change perms on *.csh (not *.sh)
8) Configuration.default: removed DB_TYPE because it is set in mgiconfig