@@ -201,7 +201,6 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_Withdrawn.sql.rpt">Withdrawn Markers</A> <B>(?)</B> <B>(mmh)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_InterimByDate.sql.rpt">Interim Markers (sorted by human symbol status/date)</A> <B>(mmh)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/BIB_RefsToIndex.rpt">References to be indexed</A> <B>(mmh)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/MGI_EGNomenUpdate.sql.rpt">MGI human symbols/names needing nomenclature updates</A> <B>(mmh)</B>
 <LI><A HREF="/data/reports/qcreports_db/archive/nomen">Archived Nomenclature Reports</A> <B>(mmh)</B>
 <LI><A HREF="/usrlocalmgi/private/www/hugo">HUGO files</A> <B>(mmh)</B>
 </OL>
